--- a/web/templates/qr-code.html
+++ b/web/templates/qr-code.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="{{.RefreshTime}}; URL=localhost:{{.UrlLink}}/">
+    <meta http-equiv="refresh" content="{{.RefreshTime}}">
 </head>
 <body>
 <img src="/pic/qr_code.jpg" alt="QR-Code" width="256" height="256">
