--- a/web/templates/checkedout.html
+++ b/web/templates/checkedout.html
@@ -16,7 +16,7 @@
 
         <h1>Hi {{.Name}}</h1>
 
-        <p>You successfully checked yourself in at {{.Location}} since {{.Time}}</p>
+        <p>Du bist nicht mehr bei {{.Location}} eingecheckt.</p>
 
     </div>
     <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
