--- a/web/templates/checkin.html
+++ b/web/templates/checkin.html
@@ -16,7 +16,7 @@
 
         <h1>Check-in to {{.Location}}</h1>
 
-        <form method="post" action="checkout">
+        <form method="post" action="checkedin">
             <div class="mb-3">
                 <label for="name" class="form-label">Name</label>
                 <input name="name" type="text" id="name" class="form-control" value="{{.Name}}">
