--- a/web/templates/qr-code.html
+++ b/web/templates/qr-code.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="{{.RefreshTime}}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="static/main.css">
 </head>
+
 <body>
-    <div class="container">
-        <h1>Als Ort wurde {{.Location}} gewählt</h1> <br>
+    <div class="container" style="text-align: center;">
+        <h1>Scannen sie den QR-Code, um sich bei {{.Location}} einzuchecken.</h1> <br>
         <img src="/qr-codes/{{.Location}}.jpg" alt="QR-Code" width="256" height="256">
+        <p><a href="{{.CheckInUrl}}" target="_blank">{{.CheckInUrl}}</a></p>
     </div>
     <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
 </body>
+
 </html>
