--- a/web/templates/checkedout.html
+++ b/web/templates/checkedout.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
 
-        <h1>Hi {{.Name}}</h1>
+        <h1>Hi {{.Firstname}} {{.Lastname}}</h1>
 
         <p>Du bist nicht mehr bei {{.Location}} eingecheckt.</p>
 
