--- a/web/templates/checkedin.html
+++ b/web/templates/checkedin.html
@@ -1,53 +1,60 @@
 <!DOCTYPE html>
 <html lang="de">
-
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Checked in</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/main.css">
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="static/main.css" />
+  </head>
 
-<body>
+  <body>
     <div class="container">
+      <h1>Hi {{.Person.Firstname}} {{.Person.Lastname}}</h1>
 
-        <h1>Hi {{.Firstname}} {{.Lastname}}</h1>
+      <p>
+        Du bist erfolgreich bei {{.Location}} seit
+        <span id="timer">00:00:00</span> eingecheckt.
+      </p>
 
-        <p>Du bist erfolgreich bei {{.Location}} seit <span id="timer">00:00:00</span> eingecheckt.</p>
-
-        <form method="post" action="checkedout">
-            <input name="firstName" value="{{.Firstname}}" hidden>
-            <input name="lastName" value="{{.Lastname}}" hidden>
-            <input name="street" value="{{.Street}}" hidden>
-            <input name="plz" value="{{.PLZ}}" hidden>
-            <input name="city" value="{{.City}}" hidden>
-            <input name="location" value="{{.Location}}" hidden>
-            <button class="btn btn-primary">Auschecken</button>
-        </form>
-
+      <form method="post" action="checkedout">
+        <input name="firstName" value="{{.Person.Firstname}}" hidden />
+        <input name="lastName" value="{{.Person.Lastname}}" hidden />
+        <input name="street" value="{{.Person.Street}}" hidden />
+        <input name="plz" value="{{.Person.PLZ}}" hidden />
+        <input name="city" value="{{.Person.City}}" hidden />
+        <input name="location" value="{{.Location}}" hidden />
+        <button class="btn btn-primary">Auschecken</button>
+      </form>
     </div>
     <script>
-        var timerElement = document.getElementById("timer")
-        var checkinTimestamp = new Date('{{.Time}}').getTime()
-        setInterval(() => {
-            var now = Date.now()
-            var since = new Date(now - checkinTimestamp)
-            var hours = since.getUTCHours()
-            var mins = since.getUTCMinutes()
-            var secs = since.getUTCSeconds()
-            timerElement.innerHTML = `${twoDigit(hours)}:${twoDigit(mins)}:${twoDigit(secs)}`
-        }, 1000);
+      var timerElement = document.getElementById('timer');
+      var checkinTimestamp = new Date('{{.Time}}').getTime();
+      setInterval(() => {
+        var now = Date.now();
+        var since = new Date(now - checkinTimestamp);
+        var hours = since.getUTCHours();
+        var mins = since.getUTCMinutes();
+        var secs = since.getUTCSeconds();
+        timerElement.innerHTML = `${twoDigit(hours)}:${twoDigit(
+          mins
+        )}:${twoDigit(secs)}`;
+      }, 1000);
 
-        function twoDigit(val) {
-            return (val < 10 ? '0' : '') + val
-        }
+      function twoDigit(val) {
+        return (val < 10 ? '0' : '') + val;
+      }
     </script>
-    <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-    </script>
-</body>
-
+    <script
+      src=" https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
